# magnetic-inversion-dictionary

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  testing.py
RESULTS/LOGS/: ScaleSpace.csv  SingleDict.csv
RESULTS/METRICS/CosineTransformDict/: metrics.csv
RESULTS/METRICS/SingleDict/: metrics.csv
RESULTS/METRICS/UnrolledDict/: metrics.csv
RESULTS/METRICS/Variational/: metrics.csv
examples/plotting/: plotters-demo.ipynb
experiments/plotting/: compare_3dmodels_plot.py  loss_comparison_plot.py
experiments/test_eval/: compute_cosine_model.py  compute_dict_model.py  compute_tv_model.py  evaluate_method.py
experiments/training/: dictionary.py  grid_search_variational.csv  variational.py
ssmaginv/: config.py
ssmaginv/dataset/: data_dict.py  generate_data.py  mag_data.py  saved_dataset.py
ssmaginv/magnetics/: __init__.py  magneticsFP.py
ssmaginv/plot/: __init__.py  plot.py
ssmaginv/solvers/: dictionary.py  variational.py
