[project]
name = "ssmaginv"
version = "0.1.0"
description = "Scale space magnetic inversion with dictionary learning"
authors = [
    { name = "Shadab Ahamed", email = "shadab.ahamed@hotmail.com" },
    { name = "Simon Ghyselincks", email = "sghyselincks@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    pyvista==0.45.0",  
    "colorcet==3.1.0",
    "matplotlib==3.10.1",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "tqdm==4.67.1",
    "seaborn==0.13.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
